Back on rails, fixed code related to logging to be more readable.